# dif-v2

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Info.plist  release-please-config.json  temp
.agents/: README.md  session-notes.md
.cargo/: config.toml
.github/workflows/: check.yml  pr-check.yml  release-please.yml  release.yml
assets/: AppIcon.icns
crates/git/: Cargo.toml
crates/git/src/: commands.rs  conventional.rs  diff.rs  lib.rs  repo.rs  status.rs  syntax.rs  tests.rs  types.rs  worktree.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs  pty.rs  session.rs  tests.rs  vt_tests.rs
crates/terminal/src/view/: clipboard.rs  drawing.rs  element.rs  helpers.rs  input.rs  mod.rs  mouse.rs  tests.rs  url.rs  viewport.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  icon.rs  lib.rs  prelude.rs  text_input.rs  theme.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: bottom_panel.rs  changes_list.rs  checks_popover.rs  config.rs  diff_view.rs  git_actions.rs  git_poll.rs  help.rs  helpers.rs  keybindings.rs  left_panel.rs  lib.rs  pane_group.rs  panel_action.rs  project.rs  right_panel.rs  runtime.rs  session.rs  settings.rs  sidebar.rs  storage.rs  tab_bar.rs  titlebar.rs  ui_state.rs  update_actions.rs  updater.rs  workspace_tests.rs
scripts/: bundle.sh
src/: app.rs  assets.rs  components.rs  git.rs  icons.rs  main.rs  picker.rs  state.rs  storage.rs  terminal.rs  text_input.rs  theme.rs  ui.rs  updater.rs  visual_test_runner.rs
src/git/: commands.rs  diff.rs  mod.rs  repo.rs  status.rs  syntax.rs  tests.rs  worktree.rs
src/state/: config.rs  git.rs  mod.rs  runtime.rs  ui.rs
src/terminal_view/: colors.rs  config.rs  font.rs  mod.rs  session.rs  tests.rs  vt_tests.rs
src/terminal_view/view/: clipboard.rs  drawing.rs  element.rs  helpers.rs  input.rs  mod.rs  mouse.rs  tests.rs  viewport.rs
src/workspace/: changes_list.rs  checks_popover.rs  commit_input.rs  diff_view.rs  git_actions.rs  git_poll.rs  help.rs  helpers.rs  left_panel.rs  mod.rs  panel_action.rs  project.rs  right_panel.rs  session.rs  settings.rs  sidebar.rs  tab_bar.rs  titlebar.rs  update_actions.rs
