[package]
name = "dif"
version = "0.7.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rust-embed = "8"
base64 = "0.22"
directories = "6.0"
ghostty_vt = { git = "https://github.com/Xuanwo/gpui-ghostty", package = "ghostty_vt" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "cff3ac6f93f506330034652f0d2389591bfb45a0", package = "gpui" }
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2"
smallvec = { version = "1.15", features = ["const_new"] }
unicode-segmentation = "1.11"
unicode-width = "0.2"
