[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.12.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
directories = "6.0"
gpui = { git = "https://github.com/zed-industries/zed", rev = "cff3ac6f93f506330034652f0d2389591bfb45a0", package = "gpui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alacritty_terminal = "0.24"
parking_lot = "0.12"
portable-pty = "0.9"
smallvec = { version = "1.15", features = ["const_new"] }
unicode-width = "0.2"
unicode-segmentation = "1.11"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
git = { path = "crates/git" }
terminal = { path = "crates/terminal" }
ui = { path = "crates/ui" }
workspace = { path = "crates/workspace" }

[package]
name = "dif"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
rust-embed = "8"
terminal.workspace = true
ui.workspace = true
workspace.workspace = true
