[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.14.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
directories = "6.0"
gpui = { git = "https://github.com/zed-industries/zed", rev = "9663d059bcf948689323753012982791e5094ba5", package = "gpui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
alacritty_terminal = "0.25.1"
parking_lot = "0.12.5"
portable-pty = "0.9"
smallvec = { version = "1.15.1", features = ["const_new"] }
unicode-width = "0.2"
unicode-segmentation = "1.12.0"
similar = "2.7.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
git = { path = "crates/git" }
terminal = { path = "crates/terminal" }
ui = { path = "crates/ui" }
workspace = { path = "crates/workspace" }

[package]
name = "dif"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "9663d059bcf948689323753012982791e5094ba5", package = "gpui_platform", features = ["font-kit"] }
rust-embed = "8.11.0"
terminal.workspace = true
ui.workspace = true
workspace.workspace = true
